--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -107,6 +107,18 @@ ul.social-media-menu{
 
 ul.social-media-menu li{
   display: inline-block;
+  background: #3b3b3b;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  line-height: 30px;
+  vertical-align: middle;
+  text-align: center;
+  padding-left: 5px;
+}
+
+ul.social-media-menu li i{
+  color: white;
 }
 
 ul.social-media-menu span {
